@@ -2,6 +2,7 @@ Version 0.8.0~dev
 
 	* Support DV codec in ffmpeg worker.
 	* Add pix_fmt option to simple H264 transcoding profile.
+	* Add resolution option to simple H264 transcoding profile.
 
 Version 0.7.0 Released on 2012/11/23
 
